# qvac_model_lc_cpp

./: .gitmodules  CMakeLists.txt  README.md  example.cc
include/: linear_classifier.hpp  param_manager.hpp
qvac_finetunable_model_cpp/: README.md
src/: linear_classifier.cpp  param_manager.cpp
